--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-    "rewrites": [
-        {"app": "/(.*)", "destination": "/"}
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/next"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
     ]
-}
+  }
+  
